fdo#76222 oox: add support for MSO 2007 SP2 encrypted documents

Change-Id: I8fa586d49437ff5422fc3daa4c81439146e598a0