include/oox/crypto/Standard2007Engine.hxx
@@ -37,7 +37,10 @@ const sal_uInt32 ENCRYPT_PROVIDER_TYPE_AES  = 0x00000018;
 const sal_uInt32 ENCRYPT_PROVIDER_TYPE_RC4  = 0x00000001;
 
 // version of encryption info used in MS Office 2007 (major = 3, minor = 2)
-const sal_uInt32 VERSION_INFO_2007_FORMAT   = 0x00020003;
+const sal_uInt32 VERSION_INFO_2007_FORMAT       = 0x00020003;
+// version of encryption info used in MS Office 2007 SP2 and older (major = 4, minor = 2)
+const sal_uInt32 VERSION_INFO_2007_FORMAT_SP2   = 0x00020004;
+
 // version of encryption info - agile (major = 4, minor = 4)
 const sal_uInt32 VERSION_INFO_AGILE         = 0x00040004;
 
